# walnut-server

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp
api/: Cargo.toml
api/src/: error.rs  main.rs
api/src/core/: connection.rs  io.rs  message.rs  mod.rs
client/cli/: Cargo.toml
client/cli/src/: connection.rs  main.rs
client/cli/src/api/: jwt.rs  master.rs  mod.rs
client/cli/src/common/: console.rs  error.rs  mod.rs  opt.rs  parser.rs
client/cli/src/crypto/: common.rs  item.rs  key.rs  mod.rs
client/cli/src/services/: client.rs
core/: Cargo.toml  console.cpp  console.hpp  encryption.cpp  encryption.hpp  message.cpp  message.hpp  shared.cpp  shared.hpp
core/api/: manager.cpp  manager.hpp
core/database/: sqlite.cpp  sqlite.hpp
core/src/: main.rs
core/src/api/: item.rs  master.rs  mod.rs
core/src/auth/: mod.rs
core/src/common/: error.rs  mod.rs  opt.rs
core/src/crypto/: mod.rs  password.rs  rsa.rs
core/src/orm/: mod.rs  password.rs  tables.rs
orm/entity/src/entities/: master.rs  mod.rs  password.rs
orm/migration/: Cargo.toml  example.env
orm/migration/src/: lib.rs  m20250422_000001_create_master_table.rs  m20250422_000002_create_password_table.rs
server/core/: Cargo.toml
server/core/src/: main.rs
server/core/src/api/: item.rs  master.rs  mod.rs
server/core/src/auth/: jwt.rs  key.rs
server/core/src/common/: error.rs  mod.rs  opt.rs
server/core/src/crypto/: password.rs
server/core/src/orm/: master.rs  password.rs
server/orm/entity/: Cargo.toml
server/orm/entity/src/entities/: master.rs  password.rs  prelude.rs
server/orm/migration/src/: m20250422_000001_create_master_table.rs  m20250422_000002_create_password_table.rs  main.rs
