[package]
name = "branch-vault-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
log = "0.4.27"
once_cell = "1.21.3"
openssl = "0.10.72"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
