[package]
name = "branch-vault-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["alloc", "std"] }
base64-url = "3.0.0"
clap = { version = "4.5.40", features = ["derive"] }
once_cell = "1.21.3"
openssl = "0.10.73"
reqwest = { version = "0.12.19", features = ["json"] }
rustyline = "16.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shlex = "1.3.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
