[package]
name = "walnut-server"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../orm/entity" }

anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
openssl = "0.10.72"
sea-orm = { version = "1.1.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
jsonwebtoken = "9.3.1"
rsa = "0.9.8"
rand = "0.8.5"
nanoid = "0.4.0"
dotenv = "0.15.0"
